--- a/index.mobile.css
+++ b/index.mobile.css
@@ -23,7 +23,7 @@
     justify-content: flex-start;
     align-items: end;
     flex-flow: column nowrap;
-    gap: 10px;
+    gap: 10.00px;
 }
 
 #navbar a {
